Bug 1709723 - Hand off overscrolling to the root content APZC only if the APZC is scrollable in the same direction of the input. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D114583